--- a/regTester.cabal
+++ b/regTester.cabal
@@ -24,6 +24,7 @@ executable gui-diff2
 
 executable regTester2
   main-is:             regTester2.hs
+  other-modules:       RegTesterLib
   build-depends:         base      == 4.8.*
                        , filepath  >= 1.3
                        , directory >= 1.2
@@ -32,9 +33,27 @@ executable regTester2
 
 executable regTester3
   main-is:             regTester3.hs
+  other-modules:       RegTesterLib
   build-depends:         base      == 4.8.*
                        , filepath  >= 1.3
                        , directory >= 1.2
                        , HSH       >= 2.1
   hs-source-dirs:      src
 
+executable update-one-std
+  main-is:             update-one-std.hs
+  other-modules:       RegTesterLib
+  build-depends:         base      == 4.8.*
+                       , filepath  >= 1.3
+                       , directory >= 1.2
+                       , HSH       >= 2.1
+  hs-source-dirs:      src
+
+executable update-all-stds
+  main-is:             update-all-stds.hs
+  other-modules:       RegTesterLib
+  build-depends:         base      == 4.8.*
+                       , filepath  >= 1.3
+                       , directory >= 1.2
+                       , HSH       >= 2.1
+  hs-source-dirs:      src
